--- a/css/style.css
+++ b/css/style.css
@@ -9,7 +9,7 @@
 	width: 100%;
 	height: 90px;
 	display: block;
-	background-color: white;
+	background-color: #031eb7;
 }
 .inner-header{
 	width: 1000px;
@@ -21,7 +21,7 @@
 .logo {
     display: inline-block;
     vertical-align: top;
-    width: 256px;
+    width: 90px;
     height: 90px;
 }
 .navbar{
@@ -37,14 +37,14 @@
 
 .navbar li a{
 	display: table-cell;
- 	color: #94D3FF;
+ 	color: #d80404;
   vertical-align: middle;
   padding: 0px 20px;
   text-decoration: none;
  }
 
 .navbar li a:hover {
-  background-color:#94D3FF ;
+  background-color:#d80404 ;
   color: white;
 }
 
@@ -52,12 +52,12 @@
   width: 20%;
   float: left;
   height: 400px;
-  background-color: #6190FA;
+  background-color: #d80404;
 }
 
 .sidebar li a{
 	font-size:15px;
-	color: white;
+	color: black;
 	padding: 10px 0px 10px 20px;
 	display:block;
 	border-bottom: 1px solid;
@@ -67,19 +67,19 @@
 .footer{
 	height:90px;
 	clear: both;
-	background-color: white;
+	background-color: #031eb7;
 }
 
 .footer p{
 	line-height:90px;
 	text-align: center;
-	color: #94D3FF;
+	color: #d80404;
 }
 .content{
 	width: 80%;
   float: left;
   height: 400px;
-  margin-top: 350px;
+  margin-top: 400px;
 }
 .advert{
 	height: 350px;
@@ -95,6 +95,9 @@
   margin-left: 5%;
   margin-top: 8%;
   height:0px;
+  color: #d80404;
+
+
 }
 
 .about-section{
@@ -104,6 +107,7 @@
   height: 300px;
   background-image: url("../images/about.jpg");
   background-size: 100% 100%;
+
 }
 
 .login{
@@ -118,6 +122,7 @@
   height: 450px;
   background-image: url("../images/admin.jpg");
   background-size: 100% 100%;
+  color: red;
 }
 .addproduct1{
 	text-align: center;
@@ -130,17 +135,17 @@
   height: 150px;
   margin-left: 25%;
   margin-right: 25%;
-  background-color: #94D3FF;
+  background-color: #d80404;
 }
 .product{
-  background-color:#47BCFF;
+  background-color:#031eb7;
   height: 160px;
   width: 24%;
   margin: 0.5%;
   float: left;
 }
 .product2{
-  background-color:#47BCFF;
+  background-color:#47BCFE;
   height: 100px;
   width: 300px;
   margin: 0.5%;
@@ -148,8 +153,8 @@
 }
 }
 .name{
-  background-color: #47BCFF;
-  height: 20px;
+  background-color: #47BCFE;
+  height: 40px;
 }
 .image{
   background-color: white;
@@ -160,9 +165,18 @@ background-color: white;
 height: 200px;
 }
 .price{
-  background-color: #A9C5FD;
+  background-color: #d80404;
   height: 20px;
 }
 .details{
-  background-color: #9EDCFF;
+  background-color: #d80404;
+}
+.right{
+  height: 400px;
+  width: 20%;
+  float: right;
+  background-color: #f1f1f1;
+  float: right;
+  background-repeat: no-repeat;
+  background-image: url("../images/ad.jpg");
 }
