--- a/css/style.css
+++ b/css/style.css
@@ -82,11 +82,11 @@
   margin-top: 400px;
 }
 .advert{
-	
+	height: 350px;
 	background-color: white;
 	background-image: url('../images/content.jpg');
 	background-repeat: no-repeat;
-	background-size: 80% 100%;
+	background-size: 100% 100%;
 }
 
 .about-section p{
