--- a/css/style.css
+++ b/css/style.css
@@ -84,6 +84,7 @@
 .advert{
 	height: 350px;
   width: 800px;
+  vertical-align: middle;
 	background-color: white;
 	background-image: url('../images/content.jpg');
 	background-repeat: no-repeat;
