--- a/css/style.css
+++ b/css/style.css
@@ -9,7 +9,7 @@
 	width: 100%;
 	height: 90px;
 	display: block;
-	background-color: #031eb7;
+	background-color: black;
 }
 .inner-header{
 	width: 750px;
@@ -83,7 +83,6 @@
 }
 .advert{
 	height: 350px;
- 
 	background-color: white;
 	background-image: url('../images/content.jpg');
 	background-repeat: no-repeat;
@@ -116,6 +115,7 @@
 	margin-right: 40%;
 	margin-top:100px;
 }
+
 .login-section{
   overflow: hidden;
   text-align: center;
@@ -125,10 +125,12 @@
   background-size: 100% 100%;
   color: red;
 }
+
 .addproduct1{
 	text-align: center;
 	margin-top:100px;
 }
+
 .addproduct2{
 	overflow: hidden;
   text-align: center;
@@ -138,6 +140,7 @@
   margin-right: 25%;
   background-color: #d80404;
 }
+
 .product{
   background-color:#031eb7;
   height: 160px;
@@ -145,6 +148,7 @@
   margin: 0.5%;
   float: left;
 }
+
 .product2{
   background-color:#47BCFE;
   height: 100px;
