--- a/css/style.css
+++ b/css/style.css
@@ -190,6 +190,15 @@ height: 200px;
   background-image: url("../images/ad.jpg");
 }
 
-h1{
+.button {
+  background-color: #4CAF50;
+  border: none;
+  color: white;
+  padding: 15px 32px;
   text-align: center;
+  text-decoration: none;
+  display: inline-block;
+  font-size: 16px;
+  margin: 4px 2px;
+  cursor: pointer;
 }
