--- a/css/style.css
+++ b/css/style.css
@@ -191,7 +191,7 @@ height: 200px;
 }
 
 .button {
-  background-color: #4CAF50;
+  background-color: white;
   border: none;
   color: white;
   padding: 15px 32px;
