--- a/css/style.css
+++ b/css/style.css
@@ -193,7 +193,7 @@ height: 200px;
 .button {
   background-color: white;
   border: none;
-  color: white;
+  color: black;
   padding: 15px 32px;
   text-align: center;
   text-decoration: none;
