--- a/css/style.css
+++ b/css/style.css
@@ -191,9 +191,9 @@ height: 200px;
 }
 
 .button {
-  background-color: white;
+  background-color: #4CAF50;
   border: none;
-  color: black;
+  color: white;
   padding: 15px 32px;
   text-align: center;
   text-decoration: none;
