--- a/css/style.css
+++ b/css/style.css
@@ -187,7 +187,7 @@ height: 200px;
 }
 
 .adminbg{
-  background-image: url("../images/ad.jpg");
+  background-image: url("../images/thKOPNS1H9.jpg");
 }
 
 .button {
