--- a/css/style.css
+++ b/css/style.css
@@ -186,8 +186,9 @@ height: 200px;
   background-image: url("../images/ad.jpg");
 }
 
-.adminbg{
+.third{
   background-image: url("../images/thKOPNS1H9.jpg");
+
 }
 
 .button {
