--- a/css/style.css
+++ b/css/style.css
@@ -187,7 +187,7 @@ height: 200px;
 }
 
 .third{
-  background-image: url("../images/thKOPNS1H9.jpg");
+  background-image: url("../images/thZKKXPIT7.jpg");
 
 }
 
