--- a/css/style.css
+++ b/css/style.css
@@ -187,7 +187,7 @@ height: 200px;
 }
 
 .third{
-  background-image: url("../images/thZKKXPIT7.jpg");
+  background-image: url("../images/487271-minecraft-wallpaper-1080p-1920x1080-hd-for-mobile.jpg");
 
 }
 
