--- a/css/style.css
+++ b/css/style.css
@@ -186,7 +186,7 @@ height: 200px;
   background-image: url("../images/ad.jpg");
 }
 
-.third{
+.adminbg{
   background-image: url("../images/487271-minecraft-wallpaper-1080p-1920x1080-hd-for-mobile.jpg");
 
 }
