--- a/css/style.css
+++ b/css/style.css
@@ -188,7 +188,7 @@ height: 200px;
 
 .adminbg{
   background-image: url("../images/487271-minecraft-wallpaper-1080p-1920x1080-hd-for-mobile.jpg");
-
+  height: 100%;
 }
 
 .button {
