--- a/css/style.css
+++ b/css/style.css
@@ -189,6 +189,9 @@ height: 200px;
 .adminbg{
   background-image: url("../images/487271-minecraft-wallpaper-1080p-1920x1080-hd-for-mobile.jpg");
   height: 100%;
+   background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
 }
 
 .button {
